# env-guard

./: .envguardignore  .gitignore  CHANGELOG.md  LICENCE  README.md  index.html  pyproject.toml
.github/workflows/: publish.yml  test.yml
env_guard/: cli.py  custom_rules.py  hooks.py  reporter.py  rules.py  scanner.py
tests/: test_rules.py  test_scanner.py
